fixed horizontal scroll

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -13,7 +13,6 @@
     line-height: 1;
     font-family: sans-serif;
     height: 100vh;
-    width: 100vw;
   }
   
   h1, h2, h3, h4, h5, h6 {
